testbed/test/cruise/compiler/expected/Abstract_Method.txt
Warning 1008 on line 6 of file 'Abstract_Method.ump':
Method syntax could not be processed. It has been considered as Extra Code
Abstract_Method.ump:6: error: abstract methods cannot have a body
  abstract void foo () 
                ^
1 error